n8n/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
spec:
  selector:
    matchLabels:
      app: n8n
  serviceName: n8n
  replicas: 1
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:2.38.3
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n

          resources:
            requests:
              memory: "320Mi"
              cpu: "20m"
            limits:
              memory: "640Mi"
              cpu: "150m"

      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
